--- a/src/pages/headers-footers/headers-footers.scss
+++ b/src/pages/headers-footers/headers-footers.scss
@@ -8,7 +8,9 @@
 		margin-left: 51px;
 	}
 	&__header {
-		border: 1px solid red;
+		height: 30px;
+		background-color: red;
+		//	border: 1px solid red;
 		&:nth-of-type(2) {
 			margin-top: 140px;
 		}
